--- a/.github/workflows/update_chess_graph.yml
+++ b/.github/workflows/update_chess_graph.yml
@@ -1,1 +1,34 @@
+name: Update Chess Rating Chart
+
+on:
+  schedule:
+    - cron: "0 0 * * *"  # Запуск раз в сутки (в полночь UTC)
+  workflow_dispatch:  # Возможность запустить вручную
+
+jobs:
+  update_chart:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: pip install matplotlib requests
+
+      - name: Run Python script
+        run: python chess_rating.py
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add rating_chart.png
+          git commit -m "Update chess rating chart" || echo "No changes to commit"
+          git push
 
